# Synthetix

./: README.md  pytorch_multi_agent_robotics.py  pytorch_robot_navigation_multimodal.py  pytorch_robotic_exploration_mapping.py  pytorch_robotic_grasping_rl.py  pytorch_robotic_grasping_self_supervised.py  pytorch_robotic_grasping_vision.py  pytorch_robotic_imitation_learning.py  pytorch_robotic_manipulation_gnn_simulated.py  pytorch_robotic_manipulation_language_instructions.py  pytorch_robotic_manipulation_mbrl.py  pytorch_robotic_manipulation_tactile_sensing.py  pytorch_robotic_navigation_complex_environments.py  pytorch_robotic_navigation_multimodal.py  pytorch_robotic_navigation_outdoor.py  pytorch_robotic_planning_under_uncertainty_simulated.py  pytorch_robotic_task_motion_planning_simulated.py  pytorch_sim_to_real_transfer_robotics.py  pytorch_warehouse_automation.py
Neuron/: .gcloudignore  CONTRIBUTING.md  DOLBY_PITCH.md  Dockerfile  HACKATHON_SUBMISSION.md  LEGO BLOCKS.xlsx  LICENSE.md  MANIFEST.in  README.md  State_of_Neuron_Framework.md  firebase.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  snowflake
Neuron/FFSapp/: docker-compose.yml
Neuron/FS_Neuron/: nf_data_sources.py  nfl_data_models.py  nfl_data_pipeline.py  player_stats_system.py
Neuron/Microservices/: NOTICE.md  Readme.md  base_microservice.py
Neuron/Tutorials/: Hello_Neuron_Your_First_Agent.ipynb  Readme.md  Tutorial_2_Memory_Basics_Teaching_Agents_to_Remember.ipynb  Tutorial_6_Configuration_Management_Customizing_Your_Agents.ipynb  Tutorial_7_CLI_Basics_Command_Line_Agent_Management.ipynb  Tutorial_9_Circuit_Design_Your_First_Agent_Network.ipynb
Neuron/chaos_engineering/: Dockerfile  Readme.md  __init__.py  agent.py  docker-compose.yaml  requirement.txt
Neuron/compliance_rules/: hipaa_rules.py
Neuron/configs/: healthcare_agent.yml  healthcare_config.yml
Neuron/data/: nfl_rules_dummy.txt
Neuron/deploy/: dashboard_api.py  requirements.txt
Neuron/docs/: index.html
Neuron/frontend/: app.py  creator-studio.html  dashboard.html  index.html
Neuron/high_velocity_AI_pipeline/: .env.example  .gitignore  Dockerfile  Readme.md  docker-comppose.yml  requirements.txt  setup.py  (+1 more)
(+522 files in other folders)
