[metadata]
name = neuron-framework
description = A composable agent framework inspired by cognitive neuroscience
author = Shalini Ananda
author_email = your.email@example.com
license = MIT
license_file = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShaliniAnandaPhD/Neuron
project_urls =
    Bug Tracker = https://github.com/ShaliniAnandaPhD/Neuron/issues
    Documentation = https://github.com/ShaliniAnandaPhD/Neuron/wiki
    Source Code = https://github.com/ShaliniAnandaPhD/Neuron
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    neuron = neuron.cli:main

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=3.0.0
    black>=22.3.0
    flake8>=4.0.1
    sphinx>=4.5.0
    sphinx-rtd-theme>=1.0.0
visualizations =
    graphviz>=0.19.1
    bokeh>=2.4.2
integrations =
    langchain>=0.0.1
    openai>=0.27.0

[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    build,
    dist
